@@ -1,0 +1,35 @@
+Source: x11proto-core
+Section: x11
+Priority: optional
+Maintainer: Debian X Strike Force <debian-x@lists.debian.org>
+Uploaders: David Nusinow <dnusinow@debian.org>, Branden Robinson <branden@debian.org>, Fabio M. Di Nitto <fabbione@fabbione.net>
+Build-Depends: debhelper (>= 5.0.0)
+Standards-Version: 3.7.2.0
+
+Package: x11proto-core-dev
+Architecture: all
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Conflicts: x-dev (<< 6.8.99.7-1)
+Replaces: x-dev (<< 6.8.99.7-1)
+Pre-Depends: x11-common (>= 1:7.0.0)
+Description: X11 core wire protocol and auxiliary headers
+ This package provides the wire protocol for the core X11 protocol, and also
+ provides a number of utility headers, used to abstract OS-specific functions.
+ .
+ This package deprecates 'x-dev', a package from the monolithic builds of
+ XFree86 and X.Org.
+ .
+ More information about X.Org can be found at:
+ <URL:http://xorg.freedesktop.org>
+ <URL:http://lists.freedesktop.org/mailman/listinfo/xorg>
+ .
+ This module can be found as the module 'proto/X11' at
+ :pserver:anoncvs@cvs.freedesktop.org:/cvs/xorg
+
+Package: x-dev
+Architecture: all
+Depends: x11proto-core-dev
+Description: dummy package for transition purposes
+ This package is a dummy package for transition purposes, and only exists to
+ depend on x11proto-core-dev.  You may safely remove it if it will not
+ remove other packages.
