@@ -1,8 +1,15 @@
 x11proto-core (7.0.7-1) experimental; urgency=low
 
   * New upstream release
+  * Move debhelper from build-depends-indep to build-depends because we use
+    dh_clean in the clean target
+  * Bump debhelper compat to 5
+  * Remove extra x11-common dependency
+  * Version x11-common pre-dependency to 1:7.0.0 to match the rest of Debian
+    and shut lintian up
+  * Run dh_install with --list-missing
 
- -- David Nusinow <dnusinow@debian.org>  Sat,  1 Jul 2006 20:21:52 -0400
+ -- David Nusinow <dnusinow@debian.org>  Sat,  1 Jul 2006 22:27:12 -0400
 
 x11proto-core (7.0.4-3) unstable; urgency=low
 
